--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\FoundryWebUI.dll" stdoutLogEnabled="false"
+      <aspNetCore processPath="dotnet" arguments=".\FoundryWebUI.dll" stdoutLogEnabled="true"
                   stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
