--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "LlmProviders": {
     "Foundry": {
-      "Endpoint": ""
+      "Endpoint": "",
+      "CliPath": ""
     }
   }
 }
