--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,7 @@
   "AllowedHosts": "*",
   "LlmProviders": {
     "Foundry": {
-      "Endpoint": "",
-      "CliPath": ""
+      "Endpoint": ""
     }
   }
 }
